--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,10 +1,11 @@
 header {
-    div {
-        width: 100%;
-        background-color: rgba($color: #000000, $alpha: 1.0);
-        img {
-            transform: scale(75%);
-            padding: 10px 50px;
-        }
+  div {
+    width: 100%;
+    background-color: var(--background-color-2);
+    box-shadow: 0px 6px 15px -1px rgba(0, 0, 0, 0.75);
+    img {
+      transform: scale(75%);
+      padding: 10px 50px;
     }
+  }
 }
