--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,13 @@
 :root {
-    --text-color: white;
-    --background-color: #181625;
-    --primary-color: #8730cf;
-    --secondary-color:#4eb787;
-    --accent-color: #988281;
-  }
+  --text-color: white;
+  --background-color: #1f1c2f;
+  --background-color-2: #181625;
+  --primary-color: #8730cf;
+  --secondary-color: #4eb787;
+  --accent-color: #988281;
+}
 body {
-    margin: 0;
-    background-color: var(--background-color);
-    font-family: 'Chakra Petch', sans-serif;
+  margin: 0;
+  background-color: var(--background-color);
+  font-family: "Chakra Petch", sans-serif;
 }
