local finish -  start DB

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
+<app-winscreen [winningPlayer]="winningPlayer" *ngIf="gameOver"></app-winscreen>
 <app-board></app-board>
