--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,11 +1,12 @@
 header {
-  div {
-    width: 100%;
-    background-color: var(--background-color-2);
-    box-shadow: 0px 6px 15px -1px rgba(0, 0, 0, 0.75);
-    img {
-      transform: scale(75%);
-      padding: 10px 50px;
-    }
+  background-color: var(--background-color-2);
+  box-shadow: 0px 6px 15px -1px rgba(0, 0, 0, 0.75);
+
+  position: fixed;
+  width: 100%;
+  z-index: 300;
+  img {
+    height: 48px;
+    margin: 16px 0px 16px 80px;
   }
 }
