--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,4 +10,5 @@ body {
   margin: 0;
   background-color: var(--background-color);
   font-family: "Chakra Petch", sans-serif;
+  color: var(--text-color);
 }
