--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-winscreen [winningPlayer]="winningPlayer" *ngIf="gameOver"></app-winscreen>
+<!-- <app-winscreen [winningPlayer]="winningPlayer" *ngIf="gameOver"></app-winscreen>
 <app-board></app-board>
+ -->
+<app-startscreen></app-startscreen>
