--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<!-- <app-winscreen [winningPlayer]="winningPlayer" *ngIf="gameOver"></app-winscreen>
-<app-board></app-board>
- -->
-<app-startscreen></app-startscreen>
+<app-winscreen [winningPlayer]="winningPlayer" *ngIf="gameOver"></app-winscreen>
+<router-outlet></router-outlet>
