--- a/src/app/containers/startscreen/startscreen.component.html
+++ b/src/app/containers/startscreen/startscreen.component.html
@@ -1,7 +1,7 @@
 <div class="screen">
   <div class="screen-container">
-    <button (click)="create()">New Game</button>
-    <button>You and Computer</button>
-    <button>Play Online</button>
+    <a (click)="create()"><p>New Game</p></a>
+    <a>You and Computer</a>
+    <a>Play Online</a>
   </div>
 </div>
