--- a/src/app/containers/startscreen/startscreen.component.scss
+++ b/src/app/containers/startscreen/startscreen.component.scss
@@ -19,7 +19,7 @@
     flex-direction: column;
     gap: 20px;
 
-    Button {
+    a {
       width: 400px;
       height: 75px;
       border-radius: 10px;
@@ -28,14 +28,23 @@
         var(--primary-color),
         var(--secondary-color)
       );
+
       color: white;
       font-size: 32px;
-      text-transform: uppercase;
-      border: none;
       font-family: "Chakra Petch", sans-serif;
       font-weight: 600;
+
+      text-transform: uppercase;
+      text-decoration: none;
+      text-align: center;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      border: none;
       transition: transform 0.2s ease-in-out;
-      cursor: pointer;
+
       box-shadow: 0px 5px 15px -2px rgba(255, 255, 255, 0.75);
 
       &:hover {
