--- a/src/app/containers/startscreen/startscreen.component.html
+++ b/src/app/containers/startscreen/startscreen.component.html
@@ -1,7 +1,6 @@
 <div class="screen">
   <div class="screen-container">
-    <a (click)="create()"><p>New Game</p></a>
-    <a>You and Computer</a>
-    <a>Play Online</a>
+    <a (click)="createNew()"><p>New Game</p></a>
+    <a (click)="create()">You VS Computer</a>
   </div>
 </div>
