--- a/src/app/containers/winscreen/winscreen.component.html
+++ b/src/app/containers/winscreen/winscreen.component.html
@@ -4,8 +4,9 @@
     [ngClass]="{
     'screen-container-X': winningPlayer === 'X',
     'screen-container-O': winningPlayer === 'O',
+    'screen-container-Draw': winningPlayer === 'Draw',
   }"
   >
-    <h1>Congrats {{ winningPlayer }} WON!</h1>
+    <h1>{{ winMsg }}</h1>
   </div>
 </div>
