--- a/src/app/containers/winscreen/winscreen.component.scss
+++ b/src/app/containers/winscreen/winscreen.component.scss
@@ -22,6 +22,9 @@
     &-O {
       box-shadow: 0px 0px 45px -1px var(--secondary-color);
     }
+    &-Draw {
+      box-shadow: 0px 0px 45px -1px white;
+    }
 
     h1 {
       font-size: 75px;
